--- a/en/news.html
+++ b/en/news.html
@@ -299,9 +299,10 @@
                     <div class="row">
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
-                                <h5 class="card-header"> <a href="news-microcement/carmen-house.html">The most famous
-                                        house in social media is designed with Topciment</a> <span
-                                        class="float-right clocki"><i class="fa fa-clock-o mr-2  "></i>26/08/2020</span>
+                                <h5 class="card-header"> <a
+                                        href="news-microcement/8-reasons-why-microcement-is-the-future-of-reforms.html">8
+                                        reasons why microcement is the future of reforms</a> <span
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2  "></i>13/10/2020</span>
                                 </h5>
                                 <div class="card-body">
                                     <div class="paragraphs">
@@ -309,14 +310,45 @@
                                             <div class="span4">
                                                 <div class="clearfix content-heading">
                                                     <img class="pull-left mr-3"
-                                                        src="../imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (5) - copia.jpg"
+                                                        src="../imagenes/news/Topciment Shkaf 2 -header.jpg"
                                                         height="auto" />
-                                                    <p>The architect Carles Faus has designed the most viral house of
-                                                        the moment: a beautiful house located in Denia that stands out
-                                                        for its luminosity and its effect of continuity thanks to the
-                                                        application of microcement. <br>
+                                                    <p>Microcement is the decorative coating of the present, but above
+                                                        all of the future, as its many advantages over other materials
+                                                        make it ideal for the creation of all kinds of spaces and
+                                                        styles. Below we explain the main benefits of microcement that
+                                                        you will fall in love with and with which you will achieve the
+                                                        home of your dreams. <br>
                                                     </p>
-                                                    <a href="news-microcement/carmen-house.html"
+                                                    <a href="news-microcement/8-reasons-why-microcement-is-the-future-of-reforms.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Read more</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
+                                <h5 class="card-header"> <a
+                                        href="news-microcement/microcement-pools-the-best-possible-option.html">Microcement
+                                        pools, the best possible option</a> <span class="float-right clocki"><i
+                                            class="fa fa-clock-o mr-2  "></i>2/10/2020</span>
+                                </h5>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3" src="../imagenes/news/portada.jpg"
+                                                        height="auto" />
+                                                    <p>Having your own swimming pool is usually one of the most
+                                                        recurrent dreams. Who wouldn't want to spend all day soaking in
+                                                        the sun or on the lawn of their house? And, if we want the best,
+                                                        a microcement pool is the perfect option. <br>
+                                                    </p>
+                                                    <a href="news-microcement/microcement-pools-the-best-possible-option.html"
                                                         class="btn float-right btn-primary leermass mt-2">Read more</a>
                                                 </div>
 
