--- a/it/sistemi/strumenti.html
+++ b/it/sistemi/strumenti.html
@@ -260,13 +260,13 @@
                     <div class="contenedorMenuOculto">
                         <div class="contenedorMagenDerecha"
                             data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-                            <h2 class="en3">La scelta dei strumenti è un fattore fundamentale per garantire
+                            <h1 class="en3">La scelta dei strumenti è un fattore fundamentale per garantire
                                 un'applicazione ottima del microcemento.
-                            </h2>
+                            </h1>
                             <p>
-                                <h3 class="h3s"> Topciment offre ai suoi clienti strumenti efficienti e di elevata
+                                <h2 class="h3s"> Topciment offre ai suoi clienti strumenti efficienti e di elevata
                                     qualità che garantiscono il conseguimento di buoni
-                                    resultati.</h3>
+                                    resultati.</h2>
                             </p>
                             <p>
                                 Sul catalogo di accesori di Topciment possiamo trovare aste miscelatrice speciali per
@@ -274,7 +274,6 @@
                                 diversi spatole per l'applicazioni dei diversi microcementi, rete di fibra di vetro e
                                 rulli.
                             </p>
-
                         </div>
                     </div>
                 </section>
@@ -507,9 +506,13 @@
                         </div>
                         <!-- descripcion -->
                         <div class="col-md-6">
-                            <h3 class="h3s">Extra light Bi-Flex steel trowel. It has a transparent, resistant and
-                                ergonomic
-                                polycarbonate handle. The blade has rounded tips and the edge is beveled.</h3>
+                            <h3 class="h3s">Spatola di acaio Bi-Flex ultra leggero. Ha un manico di policarbonato
+                                trasparente, resistente ed ergonomico. La lama ha
+                                punte arrotondate e bordi smussati.
+                            </h3>
+                            <p>Le spatole in acciaio sono le più adatte per l'applicazione di microcementi di alta
+                                granulometria.
+                            </p>
                         </div>
                     </div>
                     <!-- propiedades -->
@@ -533,7 +536,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/grosor.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class=" col-md-9">
-                                    <strong>Grosor</strong>
+                                    <strong>Spessore</strong>
                                     <p>0,40 mm</p>
                                 </div>
                             </div>
@@ -542,7 +545,7 @@
                     <!-- presentacion -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Presentazione</p>
-                    <p>They are sold in unitary blister packs.
+                    <p>Sono vendute in blister unitari
                     </p>
                 </div>
             </div>
@@ -559,9 +562,9 @@
         <section>
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
-                    <h2 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>FIBERGLASS
-                        MESH
-                        BUILTEX</h2>
+                    <h2 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
+                        Rete flessibile di fibra di vetro
+                    </h2>
                     <div class="row">
                         <!-- imagen producto -->
                         <div class="col-md-6">
@@ -570,13 +573,16 @@
                         </div>
                         <!-- descripcion -->
                         <div class="col-md-6">
-                            <h3 class="h3s">The flexible fibreglass mesh for microcement is ideal for the reinforcement
-                                of continuous
-                                microcement surfaces and coatings because it makes the substrate more solid and allows
-                                the surface to be waterproofed.</h3>
-                            <p>This flexible flat fiberglass mesh is used to reinforce the edges of walls and stairs.
-                                Moreover, it prevents the appearance of cracks at the meeting of two materials of
-                                different nature and in microcement coatings on cement mortars. </p>
+                            <h3 class="h3s">La rete flessibile di fibra di vetro per microcemento è ideale per il
+                                rafforzamento di pavimenti e rivestimente continui
+                                di microcemento perche permette dare una base più solida e poter impermeabilizzare la
+                                superficie.
+                            </h3><br><br>
+                            <p>Questa rete piatta flessibile di fibra di vetro Builtex serve a raforzzare i angoli a
+                                pareti e scale. Inoltre, previene
+                                la comparsa di crepe nell'incontro di due materiali di natura diversa e ai rivestimenti
+                                di microcemento su malte di
+                                cemento. </p>
                         </div>
                     </div>
                     <!-- propiedades -->
@@ -589,7 +595,7 @@
                                         class="figure-img img-fluid rounded"></div>
                                 <div class=" col-md-9">
                                     <strong>Misure</strong>
-                                    <p>Roll of 50 x 1m</p>
+                                    <p>Rotolo di 50 x 1m</p>
                                 </div>
                             </div>
                         </div>
@@ -598,7 +604,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/grosor.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class=" col-md-9">
-                                    <strong>Thickness </strong>
+                                    <strong>Spessore </strong>
                                     <p>Builtex GR 50<br>
                                         Builtex GR 58<br>
                                         Builtex GR 160</p>
@@ -609,7 +615,7 @@
                     <!-- presentacion -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Presentazione</p>
-                    <p>The number of units varies according to the weight of the mesh.
+                    <p>Sono vendute per unità
                     </p>
                 </div>
 
@@ -637,13 +643,16 @@
                         </div>
                         <!-- descripcion -->
                         <div class="col-md-6">
-                            <h3 class="h3s">Special roller for priming and sealing microcement. The WT polyester roller
-                                is
-                                particularly suitable for our water-based primers and sealers. It is a roller that
-                                provides a fine, uniform and high quality finish.
+                            <h3 class="h3s">
+                                Rullo speciale per i primer e sigillante del microcemento.
+                                Il rullo da smaltare WT è specialmente adatto per i nostri primer e sigillanti a base
+                                acquosa. É un rullo che fornisce
+                                una finitura fina, uniforme e di alta qualità.
                             </h3>
-                            <p>The DSV enamel roller is a product with a very short pile, which is highly recommended
-                                for our sealers, due to its resistance to solvents and acetones.
+                            <p>Il rullo da smaltare DSV è un prodotto a pelo molto corto, il che lo rende molto
+                                raccomandabile per i nostri sigillanti,
+                                per la sua resistenza a solventi e acetone.
+
                             </p>
                         </div>
                     </div>
@@ -667,9 +676,10 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/material.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class=" col-md-9">
-                                    <strong>Material </strong>
-                                    <p>Polyester fibre (WT)<br>
-                                        Woven virgin wool (DSV)</p>
+                                    <strong>Materiale </strong>
+                                    <p>
+                                        Fibre di poliestere (WT)<br>
+                                        Lana vergine tessuta (DSV)</p>
                                 </div>
                             </div>
                         </div>
@@ -677,7 +687,7 @@
                     <!-- presentacion -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Presentazione</p>
-                    <p>They are sold in unitary blister packs.
+                    <p>Sono vendute per casse
                     </p>
                 </div>
 
