--- a/it/sistemi/unlimitted.html
+++ b/it/sistemi/unlimitted.html
@@ -29,9 +29,9 @@
     <script type='text/javascript' src='../../js/mycode.js'></script>
     <!-- End new styles -->
 
-    <title>Applicazione del sigillante per proteggere il microcemento</title>
-    <meta name="description"
-        content="Per proteggere il microcemento applichiamo un sigillante che gli conferisce resistenza chimica e meccanica,finitura satinata, opaca o lucida." />
+    <title>Microcemento bicomponente con finiture più delicate e maggiore lavorabilità</title>
+    <meta name="description" content="Unlimitted è la nuova linea di microcemento bicomponente. Offre tutti i vantaggi di Sttandar, ma con maggiore
+        lavorabilità" />
 
 
     <link rel="canonical" href="https://www.topciment.com/it/arcocem-pigmenti.html" />
@@ -261,18 +261,18 @@
 
                                 <p>
                                     <h1 class="h2s">Unlimitted</h1>
-                                    <h3 class="h3s">is the new bicomponent microcement (cement + resin)
-                                        product line. </h3>It is the improved version of the Sttandard range. It offers
-                                    many
-                                    advantages:
+                                    <h3 class="h3s">è la nuova linea di microcemento bicomponente (cemento + resina).
+                                    </h3>
+                                    È la versione migliorata della gamma
+                                    Sttandar. Fornisce tanti vantaggi:
                                     <ul>
-                                        <li>Improves the workability of the material</li>
-                                        <li> It allows to obtain smoother and softer finishes than Sttandard Microdeck
+                                        <li> Maggiore lavorabilità del materiale </li>
+                                        <li> Permette ottenere finiture più delicate e liscie che Sttandard Microdeck
                                         </li>
-                                        <li>It improves its final mechanical resistance. </li>
-                                        <li>It reduces the burning effect produced by the application with a steel
-                                            trowel.</li>
-                                        <li> Offers a ductility similar to lime based mortars</li>
+                                        <li> Migliora le resistenze meccaniche finale. </li>
+                                        <li> Riduce l'effetto brusciato che viene prodotto per l'applicazione con la
+                                            spatola di acaio. </li>
+                                        <li> Fornisce una duttilità similare alle malte a base calce </li>
                                     </ul>
                                 </p>
 
