--- a/noticias-microcemento/8-motivos-microcemento-futuro-reformas.html
+++ b/noticias-microcemento/8-motivos-microcemento-futuro-reformas.html
@@ -31,7 +31,7 @@
 
     <title> 8 motivos por los que el microcemento es el futuro de las reformas</title>
     <meta name="description"
-        content="¿Estás pensando en reformar tu piscina? ¿Buscas las mejores prestaciones técnicas y estéticas? Descubre todas las ventajas de tener una piscina de microcemento.  " />
+        content="Conoce las principales ventajas del microcemento, el revestimiento decorativo que es tendencia en todo tipo de reformas en estancias interiores y exteriores. " />
     <style type="text/css">
         div.ocultable {
             display: none;
@@ -301,6 +301,7 @@
 
 
 
+
                                     <h2 class="en3">1. Infinidad de colores
                                     </h2>
                                     <p>La mezcla de los diferentes tipos de pigmentos de color del microcemento ofrece
@@ -319,7 +320,9 @@
                                         obras y reformas del hogar. ¡Y nada de tener miedo por si se despega! No
                                         ocurrirá.
                                     </p>
-
+                                    <img src="../imagenes/news/Topciment Shkaf 2.jpg"
+                                        class="figure-img img-fluid rounded" alt="Microcemento topciment"
+                                        title="Microcemento topciment">
                                     <h2 class="en3"> 3. Alto valor decorativo</h2>
                                     <p>
                                         El microcemento es aplicable tanto a interiores como exteriores, se adapta a la
@@ -367,12 +370,25 @@
 
                                     <h2 class="en3"> 8. Relación calidad-precio
                                     </h2>
+                                    <img src="../imagenes/news/MICRO_CEMENT21168.jpg"
+                                        class="figure-img img-fluid rounded" alt="Microcemento topciment"
+                                        title="Microcemento topciment">
                                     <p>
                                         En último lugar, y no por ello menos importante, la joya de la Corona. El hecho
                                         de no ser necesario eliminar la anterior
                                         superficie para instalar el microcemento reduce drásticamente el coste total de
                                         una obra o reforma que no pierde ni un
                                         ápice de distinción y elegancia.</p>
+
+                                    <h2 class="en3">Topciment, la mejor elección</h2>
+                                    <p>Topciment es líder en la fabricación de microcemento en España, con una amplia
+                                        experiencia desde 2005 que le ha llevado a construir una red de distribuidores
+                                        en más de 58 países del mundo. Nuestros productos combinan altas prestaciones,
+                                        facilidad de aplicación y unos acabados exclusivos que no encontrarás en ningún
+                                        otro lugar.
+                                        <p> <strong> <a class="links" href="../sistemas.html"> ¿A qué estás
+                                                    esperando?</a></strong></p>
+                                    </p>
 
                                     <!--  <img style=" display: block;
                                   margin-left: auto;
