--- a/noticias.html
+++ b/noticias.html
@@ -369,12 +369,12 @@
             <div class="row">
                 <div class="col-md-12 pr-0 pl-0 ">
                     <div class="row">
-                        <!--  <div class="col-md-12 pr-0 pl-0 mb-5">
+                        <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a
                                         href="noticias-microcemento/8-motivos-microcemento-futuro-reformas.html">8
                                         motivos por los que el microcemento es el futuro de las reformas</a> <span
-                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>30/09/2020</span>
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>13/10/2020</span>
                                 </h2>
                                 <div class="card-body">
                                     <div class="paragraphs">
@@ -382,7 +382,7 @@
                                             <div class="span4">
                                                 <div class="clearfix content-heading">
                                                     <img class="pull-left mr-3"
-                                                        src="imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (5) - copia.jpg"
+                                                        src="imagenes/news/Topciment Shkaf 2 -header.jpg"
                                                         height="auto" />
                                                     <p>El microcemento es el revestimiento decorativo del presente, pero
                                                         sobre todo del futuro, ya que sus múltiples ventajas frente a
@@ -401,7 +401,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a
